{
  "version": 4,
  "terraform_version": "1.13.3",
  "serial": 8,
  "lineage": "7f8bbd55-5461-030a-eac5-4fc6fdbd6b27",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190164553432:internet-gateway/igw-04c84344b2329bbef",
            "id": "igw-04c84344b2329bbef",
            "owner_id": "190164553432",
            "region": "eu-central-1",
            "tags": {
              "Name": "pf2-igw",
              "Provisioned": "terraform"
            },
            "tags_all": {
              "Name": "pf2-igw",
              "Provisioned": "terraform"
            },
            "vpc_id": "vpc-073d2e9f97de5b21f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190164553432:route-table/rtb-0e8308f678c93d92d",
            "id": "rtb-0e8308f678c93d92d",
            "owner_id": "190164553432",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-04c84344b2329bbef",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "pf2-public-rt",
              "Provisioned": "terraform"
            },
            "tags_all": {
              "Name": "pf2-public-rt",
              "Provisioned": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-073d2e9f97de5b21f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "190164553432",
            "id": "rtb-0e8308f678c93d92d",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f9656d0a9128e8c3",
            "region": "eu-central-1",
            "route_table_id": "rtb-0e8308f678c93d92d",
            "subnet_id": "subnet-07405c612f6dbe8cf"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190164553432:security-group/sg-021327d8b8ad7d925",
            "description": "Public access security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-021327d8b8ad7d925",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "pf2-public-sg",
            "name_prefix": "",
            "owner_id": "190164553432",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "pf2-public-sg",
              "Provisioned": "terraform"
            },
            "tags_all": {
              "Name": "pf2-public-sg",
              "Provisioned": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-073d2e9f97de5b21f"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "190164553432",
            "id": "sg-021327d8b8ad7d925",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190164553432:subnet/subnet-02a30f0ff40469b29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02a30f0ff40469b29",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "190164553432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "pf2-subnet-2",
              "Provisioned": "terraform",
              "Tier": "private"
            },
            "tags_all": {
              "Name": "pf2-subnet-2",
              "Provisioned": "terraform",
              "Tier": "private"
            },
            "vpc_id": "vpc-073d2e9f97de5b21f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "190164553432",
            "id": "subnet-02a30f0ff40469b29",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190164553432:subnet/subnet-07405c612f6dbe8cf",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07405c612f6dbe8cf",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "190164553432",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "pf2-subnet-1",
              "Provisioned": "terraform",
              "Tier": "public"
            },
            "tags_all": {
              "Name": "pf2-subnet-1",
              "Provisioned": "terraform",
              "Tier": "public"
            },
            "vpc_id": "vpc-073d2e9f97de5b21f"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "190164553432",
            "id": "subnet-07405c612f6dbe8cf",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:190164553432:vpc/vpc-073d2e9f97de5b21f",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-063fb8dfccaaf0b96",
            "default_route_table_id": "rtb-0593938a775452a0d",
            "default_security_group_id": "sg-0d80fb150d990204a",
            "dhcp_options_id": "dopt-0273cd35d97493793",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-073d2e9f97de5b21f",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0593938a775452a0d",
            "owner_id": "190164553432",
            "region": "eu-central-1",
            "tags": {
              "Name": "pf2-vpc-tf",
              "Provisioned": "terraform"
            },
            "tags_all": {
              "Name": "pf2-vpc-tf",
              "Provisioned": "terraform"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "190164553432",
            "id": "vpc-073d2e9f97de5b21f",
            "region": "eu-central-1"
          }
        }
      ]
    }
  ]
}